correct ticket numbers

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                   <img src="images/icons/eagle.svg">
                   <div>
                     <h3>Entrada Early Bird</h3>
-                    <small>30 entradas</small>
+                    <small>34 entradas</small>
                   </div>
                 </div>
                 <p>Disponibles a partir del <strong>19 de noviembre</strong> a las <strong>12 del mediodía</strong>.</p>
@@ -163,14 +163,14 @@
             </div>
           </div>
 
-          <div class="ticket-wrapper active">
+          <div class="ticket-wrapper inactive">
             <div class="ticket">
               <div>  
                 <div class="ticket-title">
                   <img src="images/icons/student.svg">
                   <div>
                     <h3>Entrada de estudiante*</h3>
-                    <small>60 entradas</small>
+                    <small>52 entradas</small>
                   </div>
                 </div>
                 <p>Disponibles a partir del <strong>2 de enero</strong> a las <strong>12 del mediodía</strong>.</p>
@@ -183,7 +183,7 @@
               <div>
                 <div class="ticket-footer">
                   <span class="ticket-price">25€</span>
-                  <a rel="noopener" target="_blank" href="https://www.koliseo.com/frontfest/2019#/" class="btn">Comprar</a>
+                  <span class="btn disabled">Agotadas</span>
                 </div>
               </div>
             </div>
