link speakers images with their description

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
             <span>09:45 - 10:30</span>
           </div>
           <div class="talk-author">
-            <img alt="Paqui Calabria" src="images/photos/PaquiCalabria.jpg">
-            <img alt="Ismael Navarro" src="images/photos/IsmaelNavarro.jpg">
+            <a href="#paqui-calabria" class="image-link"><img alt="Paqui Calabria" src="images/photos/PaquiCalabria.jpg"></a>
+            <a href="#ismael-navarro" class="image-link"><img alt="Ismael Navarro" src="images/photos/IsmaelNavarro.jpg"></a>
             <div>Paqui Calabria e Ismael Navarro</div>
           </div>
           <h2 class="talk-title">Duendecillos en tu navegador: service workers</h2>
@@ -232,7 +232,7 @@
             <span>10:35 - 11:20</span>
           </div>
           <div class="talk-author">
-            <img alt="Cristina Ponce" src="images/photos/CristinaPonce.jpg">
+            <a href="#cristina-ponce" class="image-link"><img alt="Cristina Ponce" src="images/photos/CristinaPonce.jpg"></a>
             <div>Cristina Ponce</div>
           </div>
           <h2 class="talk-title">Road to Web Components</h2>
@@ -255,7 +255,7 @@
             <span>12:00 - 12:45</span>
           </div>
           <div class="talk-author">
-            <img alt="Eduardo San Martín" src="images/photos/EduardoSanMartin.jpg">
+            <a href="#eduardo-san-martin" class="image-link"><img alt="Eduardo San Martín" src="images/photos/EduardoSanMartin.jpg"></a>
             <div>Eduardo San Martín</div>
           </div>
           <h2 class="talk-title">¿Cómo funciona un router SPA? Caso práctico con Vue Router</h2>
@@ -273,7 +273,7 @@
             <span>12:50 - 13:35</span>
           </div>
           <div class="talk-author">
-            <img alt="José Antonio Vela" src="images/photos/JoseAntonioVela.jpg">
+            <a href="#jose-antonio-vela" class="image-link"><img alt="José Antonio Vela" src="images/photos/JoseAntonioVela.jpg"></a>
             <div>José Antonio Vela</div>
           </div>
           <h2 class="talk-title">La igualdad en los espacios laborales: retos y beneficios</h2>
@@ -296,7 +296,7 @@
             <span>15:00 - 15:45</span>
           </div>
           <div class="talk-author">
-            <img alt="James Heda Weng" src="images/photos/JamesHedaWeng.jpg">
+            <a href="#james-heda-weng" class="image-link"><img alt="James Heda Weng" src="images/photos/JamesHedaWeng.jpg"></a>
             <div>James Heda Weng</div>
           </div>
           <h2 class="talk-title">Cómo te la "colamos" los diseñadores todos los días</h2>
@@ -317,7 +317,7 @@
             <span>15:50 - 16:35</span>
           </div>
           <div class="talk-author">
-            <img alt="Vicente Lucendo" src="images/photos/VicenteLucendo.jpg">
+            <a href="#vicente-lucendo" class="image-link"><img alt="Vicente Lucendo" src="images/photos/VicenteLucendo.jpg"></a>
             <div>Vicente Lucendo</div>
           </div>
           <h2 class="talk-title">Cómo programar un motor de animaciones cuidando el rendimiento</h2>
@@ -340,7 +340,7 @@
             <span>17:15 - 18:00</span>
           </div>
           <div class="talk-author">
-            <img alt="Jesús Olazagoitia" src="images/photos/JesusOlazagoitia.jpg">
+            <a href="#jesus-olazagoitia" class="image-link"><img alt="Jesús Olazagoitia" src="images/photos/JesusOlazagoitia.jpg"></a>
             <div>Jesús Olazagoitia</div>
           </div>
           <h2 class="talk-title">Las reglas han cambiado, Custom Properties!</h2>
@@ -362,7 +362,7 @@
             <span>18:05 - 18:50</span>
           </div>
           <div class="talk-author">
-            <img alt="Sergio Arbeo" src="images/photos/SergioArbeo.jpg">
+            <a href="#sergio-arbeo" class="image-link"><img alt="Sergio Arbeo" src="images/photos/SergioArbeo.jpg"></a>
             <div>Sergio Arbeo</div>
           </div>
           <h2 class="talk-title">Testing sin dogmas</h2>
@@ -390,7 +390,7 @@
 
         <div class="speaker-row">
 
-          <div class="speaker">
+          <div id="eduardo-san-martin" class="speaker">
             <img class="speaker-img" alt="Eduardo San Martín" src="images/photos/EduardoSanMartin.jpg">
             <div class="speaker-title">Eduardo San Martín</div>
             <div class="speaker-sn">
@@ -402,7 +402,7 @@
             </div>
           </div>
   
-          <div class="speaker">
+          <div id="jose-antonio-vela" class="speaker">
             <img class="speaker-img" alt="José Antonio Vela" src="images/photos/JoseAntonioVela.jpg">
             <div class="speaker-title">José Antonio Vela</div>
             <div class="speaker-sn">
@@ -421,7 +421,7 @@
             </div>
           </div>
 
-          <div class="speaker">
+          <div id="cristina-ponce" class="speaker">
             <img class="speaker-img" alt="Cristina Ponce" src="images/photos/CristinaPonce.jpg">
             <div class="speaker-title">Cristina Ponce</div>
             <div class="speaker-sn">
@@ -434,7 +434,7 @@
             </div>
           </div>
 
-          <div class="speaker">
+          <div id="jesus-olazagoitia" class="speaker">
             <img class="speaker-img" alt="Jesús Olazagoitia" src="images/photos/JesusOlazagoitia.jpg">
             <div class="speaker-title">Jesús Olazagoitia</div>
             <div class="speaker-sn">
@@ -447,7 +447,7 @@
             </div>
           </div>
 
-          <div class="speaker">
+          <div id="james-heda-weng" class="speaker">
             <img class="speaker-img" alt="James Heda Weng" src="images/photos/JamesHedaWeng.jpg">
             <div class="speaker-title">James Heda Weng</div>
             <div class="speaker-sn">
@@ -460,7 +460,7 @@
             </div>
           </div>
 
-          <div class="speaker">
+          <div id="vicente-lucendo" class="speaker">
             <img class="speaker-img" alt="Vicente Lucendo" src="images/photos/VicenteLucendo.jpg">
             <div class="speaker-title">Vicente Lucendo</div>
             <div class="speaker-sn">
@@ -472,19 +472,7 @@
             </div>
           </div>
 
-          <div class="speaker">
-            <img class="speaker-img" alt="Ismael Navarro" src="images/photos/IsmaelNavarro.jpg">
-            <div class="speaker-title">Ismael Navarro</div>
-            <div class="speaker-sn">
-              <a target="_blank" rel="noopener" href="https://twitter.com/ismanapa"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
-              <a target="_blank" rel="noopener" href="https://github.com/ismanapa"><img alt="Github" src="images/icons/color/Github.svg"></a>
-            </div>
-            <div class="speaker-desc">
-              Actualmente trabaja como desarrollador fullstack en Plain Concepts realizando todo tipo de proyectos. Le apasiona todo lo relacionado con la informática, la electrónica, los videojuegos y en su tiempo libre siempre le gusta empezar pet projects que nunca consigue acabar. 
-            </div>
-          </div>
-
-          <div class="speaker">
+          <div id="paqui-calabria" class="speaker">
             <img class="speaker-img" alt="Paqui Calabria" src="images/photos/PaquiCalabria.jpg">
             <div class="speaker-title">Paqui Calabria</div>
             <div class="speaker-sn">
@@ -496,7 +484,19 @@
             </div>
           </div>
 
-          <div class="speaker">
+          <div id="ismael-navarro" class="speaker">
+            <img class="speaker-img" alt="Ismael Navarro" src="images/photos/IsmaelNavarro.jpg">
+            <div class="speaker-title">Ismael Navarro</div>
+            <div class="speaker-sn">
+              <a target="_blank" rel="noopener" href="https://twitter.com/ismanapa"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+              <a target="_blank" rel="noopener" href="https://github.com/ismanapa"><img alt="Github" src="images/icons/color/Github.svg"></a>
+            </div>
+            <div class="speaker-desc">
+              Actualmente trabaja como desarrollador fullstack en Plain Concepts realizando todo tipo de proyectos. Le apasiona todo lo relacionado con la informática, la electrónica, los videojuegos y en su tiempo libre siempre le gusta empezar pet projects que nunca consigue acabar. 
+            </div>
+          </div>
+
+          <div id="sergio-arbeo" class="speaker">
             <img class="speaker-img" alt="Sergio Arbeo" src="images/photos/SergioArbeo.jpg">
             <div class="speaker-title">Sergio Arbeo</div>
             <div class="speaker-sn">
