--- a/index.html
+++ b/index.html
@@ -517,31 +517,32 @@
         <h1 id="patrocinadores">Patrocinadores</h1>
         <h2>Platinum</h2>
         <div class="sponsor-row">
-          <a class="no-border" href="https://www.paradigmadigital.com/"><div class="sponsor-platinum"><img alt="Paradigma Digital" src="images/sponsors/paradigma.png"></div></a>
+          <a class="no-border" target="_blank" href="https://www.paradigmadigital.com/"><div class="sponsor-platinum"><img alt="Paradigma Digital" src="images/sponsors/paradigma.png"></div></a>
+          <a class="no-border" target="_blank" href="https://www.schibsted.es/"><div class="sponsor-platinum"><img alt="Schibsted" src="images/sponsors/schibsted.png"></div></a>
         </div>
         <h2>Gold</h2>
         <div class="sponsor-row">
-          <a class="no-border" href="https://www.opensistemas.com/"><div class="sponsor-gold"><img alt="Open Sistemas" class="width-60" src="images/sponsors/open-sistemas.png"></div></a>
-          <a class="no-border" href="https://careers.ryanair.com/ryanair-labs-madrid/"><div class="sponsor-gold"><img alt="Ryanair" class="width-85" src="images/sponsors/ryanair.jpg"></div></a>
-          <a class="no-border" href="https://babel.es/"><div class="sponsor-gold"><img alt="Babel" src="images/sponsors/babel.png"></div></a>
-          <a class="no-border" href="https://the-cocktail.com/"><div class="sponsor-gold"><img alt="The Cocktail" src="images/sponsors/the-cocktail.svg"></div></a>
-          <a class="no-border" href="https://www.ing.es/"><div class="sponsor-gold"><img alt="ING" class="width-75" src="images/sponsors/ing.svg"></div></a>
+          <a class="no-border" target="_blank" href="https://www.opensistemas.com/"><div class="sponsor-gold"><img alt="Open Sistemas" class="width-60" src="images/sponsors/open-sistemas.png"></div></a>
+          <a class="no-border" target="_blank" href="https://careers.ryanair.com/ryanair-labs-madrid/"><div class="sponsor-gold"><img alt="Ryanair" class="width-85" src="images/sponsors/ryanair.jpg"></div></a>
+          <a class="no-border" target="_blank" href="https://babel.es/"><div class="sponsor-gold"><img alt="Babel" src="images/sponsors/babel.png"></div></a>
+          <a class="no-border" target="_blank" href="https://the-cocktail.com/"><div class="sponsor-gold"><img alt="The Cocktail" src="images/sponsors/the-cocktail.svg"></div></a>
+          <a class="no-border" target="_blank" href="https://www.ing.es/"><div class="sponsor-gold"><img alt="ING" class="width-75" src="images/sponsors/ing.svg"></div></a>
         </div>
         <h2>Silver</h2>
         <div class="sponsor-row">
-          <a class="no-border" href="https://www.plainconcepts.com/"><div class="sponsor-silver"><img alt="Plain Concepts" src="images/sponsors/plain-concepts.png"></div></a>
-          <a class="no-border" href="https://machiina.com/"><div class="sponsor-silver"><img alt="Machiina" src="images/sponsors/machiina.svg"></div></a>
-          <a class="no-border" href="https://www.kairosds.com/"><div class="sponsor-silver"><img alt="Kairos DS" src="images/sponsors/kairos.svg"></div></a>
-          <a class="no-border" href="https://www.robertwalters.es/"><div class="sponsor-silver"><img alt="Robert Walters" src="images/sponsors/robert-walters.png"></div></a>
-          <a class="no-border" href="https://www.walterspeople.es/"><div class="sponsor-silver"><img alt="Walters People" class="width-60" src="images/sponsors/walters-people.png"></div></a>
+          <a class="no-border" target="_blank" href="https://www.plainconcepts.com/"><div class="sponsor-silver"><img alt="Plain Concepts" src="images/sponsors/plain-concepts.png"></div></a>
+          <a class="no-border" target="_blank" href="https://machiina.com/"><div class="sponsor-silver"><img alt="Machiina" src="images/sponsors/machiina.svg"></div></a>
+          <a class="no-border" target="_blank" href="https://www.kairosds.com/"><div class="sponsor-silver"><img alt="Kairos DS" src="images/sponsors/kairos.svg"></div></a>
+          <a class="no-border" target="_blank" href="https://www.robertwalters.es/"><div class="sponsor-silver"><img alt="Robert Walters" src="images/sponsors/robert-walters.png"></div></a>
+          <a class="no-border" target="_blank" href="https://www.walterspeople.es/"><div class="sponsor-silver"><img alt="Walters People" class="width-60" src="images/sponsors/walters-people.png"></div></a>
         </div>
         <h2>En especies</h2>
         <div class="sponsor-row">
-          <a class="no-border" href="https://egghead.io/"><div class="sponsor-inkind"><img alt="egghead" src="images/sponsors/egghead.svg"></div></a>
-          <a class="no-border" href="https://www.stickermule.com/"><div class="sponsor-inkind"><img alt="Sticker Mule" src="images/sponsors/sticker-mule.svg"></div></a>
-          <a class="no-border" href="https://www.manning.com/"><div class="sponsor-inkind"><img alt="Manning Publications" src="images/sponsors/manning.svg"></div></a>
-          <a class="no-border" href="https://www.facebook.com/productoscodan/"><div class="sponsor-inkind"><img alt="Conchas Codan" class="width-70" src="images/sponsors/codan.jpg"></div></a>
-          <a class="no-border" href="https://vueschool.io/"><div class="sponsor-inkind"><img alt="Vue School" src="images/sponsors/vue-school.svg"></div></a>
+          <a class="no-border" target="_blank" href="https://egghead.io/"><div class="sponsor-inkind"><img alt="egghead" src="images/sponsors/egghead.svg"></div></a>
+          <a class="no-border" target="_blank" href="https://www.stickermule.com/"><div class="sponsor-inkind"><img alt="Sticker Mule" src="images/sponsors/sticker-mule.svg"></div></a>
+          <a class="no-border" target="_blank" href="https://www.manning.com/"><div class="sponsor-inkind"><img alt="Manning Publications" src="images/sponsors/manning.svg"></div></a>
+          <a class="no-border" target="_blank" href="https://www.facebook.com/productoscodan/"><div class="sponsor-inkind"><img alt="Conchas Codan" class="width-70" src="images/sponsors/codan.jpg"></div></a>
+          <a class="no-border" target="_blank" href="https://vueschool.io/"><div class="sponsor-inkind"><img alt="Vue School" src="images/sponsors/vue-school.svg"></div></a>
         </div>
       </section>
 
