--- a/index.html
+++ b/index.html
@@ -202,7 +202,12 @@
 
       <section class="section">
         <h1 id="agenda">Agenda</h1>
-
+        
+        <div class="talk-separator">
+          <div class="talk-time"><span>08:30 - 09:20</span></div>
+          <div class="talk-separator-title"><span>Acreditación</span></div>
+        </div>
+        
         <div class="talk-separator">
           <div class="talk-time"><span>09:30 - 09:40</span></div>
           <div class="talk-separator-title"><span>Presentación</span></div>
